--- a/src/app/no-tabindex/no-tabindex.component.css
+++ b/src/app/no-tabindex/no-tabindex.component.css
@@ -1,99 +1,101 @@
 h1 {
-    line-height: 0.9;
+	line-height: 0.9;
 }
 
 h1 span.sub {
-    display: inline-block;
-    font-size: .66em;
-    font-style: italic;
-    margin-top: -50px;
+	display: inline-block;
+	font-size: 0.66em;
+	font-style: italic;
+	margin-top: -50px;
 }
 
 h2 {
-    display: inline-block;
-    width: 50%;
+	display: inline-block;
+	width: 50%;
 }
 
 .cmi-wrapper {
-    padding-left: 4px;
-    padding-right: 4px;
+	padding-left: 4px;
+	padding-right: 4px;
 }
 
 .test-btn {
-    color: #000;
-    cursor: pointer;
-    background-color: #fff;
-    border: solid 1px #000;
-    display: block;
-    margin-bottom: 4px;
-    padding: 4px 16px;
-    text-align: left;
-    text-decoration: none;
-    width: 100%;
+	color: #000;
+	cursor: pointer;
+	background-color: #fff;
+	border: solid 1px #000;
+	display: block;
+	margin-bottom: 4px;
+	padding: 4px 16px;
+	text-align: left;
+	text-decoration: none;
+	width: 100%;
 }
 
-    .test-btn:hover, .test-btn:focus {
-        background-color: #006994;
-        color: #fff;
-    }
+.test-btn:hover,
+.test-btn:focus {
+	background-color: #006994;
+	color: #fff;
+}
 
 .test-btn span {
-    font-family: 'Consolas', 'Courier New', monospace;
+	font-family: 'Consolas', 'Courier New', monospace;
 }
 
 .ul-test {
-    list-style: none;
-    margin-bottom: 0;
-    padding-left: 0;
+	list-style: none;
+	margin-bottom: 0;
+	padding-left: 0;
 }
 
 .reset-btn-wrapper {
-    display: inline-block;
-    text-align: right;
-    width: 50%;
+	display: inline-block;
+	text-align: right;
+	width: 50%;
 }
 
 .reset-btn {
-    background-color: #fff;
-    border: solid 1px #000;
-    color: #000;
-    padding: 4px 16px;
+	background-color: #fff;
+	border: solid 1px #000;
+	color: #000;
+	padding: 4px 16px;
 }
 
-    .reset-btn:hover, .reset-btn:focus {
-        background-color: #006994;
-        color: #fff;
-    }
+.reset-btn:hover,
+.reset-btn:focus {
+	background-color: #006994;
+	color: #fff;
+}
 
 .p-w-4 {
-    padding-left: 4px;
-    padding-right: 4px;
+	padding-left: 4px;
+	padding-right: 4px;
 }
 
 .chat-wrapper {
-    background-color: #eee;
-    border-radius: 8px;
-    min-height: 64px;
-    padding: 8px;
+	background-color: #eee;
+	border-radius: 8px;
+	min-height: 64px;
+	padding: 8px;
 }
 
 .no-chats {
-    font-style: italic;
-    margin-bottom: 0;
-    margin-top: 16px;
-    text-align: center;
+	font-style: italic;
+	margin-bottom: 0;
+	margin-top: 16px;
+	text-align: center;
 }
 
 @media screen and (max-width: 512px) {
-    h1 {
-        font-size: 28px;
-    }
+	h1 {
+		font-size: 28px;
+	}
 }
 
 @media screen and (max-width: 770px) {
-    .test-btn {
-        font-size: 14px;
-        padding: 8px;
-        text-align: center;
-    }
+	.test-btn {
+		font-size: 14px;
+		padding: 8px;
+		text-align: center;
+	}
 }
