--- a/src/app/specs/specs.component.html
+++ b/src/app/specs/specs.component.html
@@ -1,135 +1,135 @@
 <div class="row">
-  <div class="col-md-12">
-    <h1>Specs</h1>
-    <h2>What's This About?</h2>
-    <p>
-      This project is a demonstration of how different HTML elements behave with
-      Angular's click and keyup.enter event handlers. Proper use of the
-      keyup.enter event handler is critical to maintain site usability for
-      keyboard-exclusive users and is therefore critical to follow
-      <a href="https://www.w3.org/TR/WCAG21/#keyboard-accessible">
-        WCAG Guidleine 2.1 </a
-      >.
-    </p>
-    <h2>How These Event Handlers Work</h2>
-    <p>
-      Both event handlers have straightforward names. The
-      <code>click</code> handler is declared on an HTML element along with a
-      quoted template statement. Angular event binding will listen for the
-      element's click event and call the template statement. The
-      <code>keyup.enter</code> event listener follows the same pattern, with the
-      Angular event binding now listening for the element's keyup enter event.
-      The standard practice is to call a single function to handle the event.
-    </p>
-    <p>
-      The following is an example of the click and keyup.enter event handlers.
-    </p>
-    <p>
-      <code
-        >&lt;button (click)="myClickFunction()"&gt;Submit{{
-          "/button" | htmlTag
-        }}</code
-      ><br />
-      <code
-        >&lt;button (keyup.enter)="myEnterFunction()"&gt;Submit{{
-          "/button" | htmlTag
-        }}</code
-      >
-    </p>
-    <h2>Using These Event Handlers Properly</h2>
-    <p>
-      The click event handler works consistently and as expected. All elements
-      with a click event handler on them will run their function when clicked.
-      The keyup.enter function is also consistent. All elements with a
-      keyup.enter handler will run their function when enter is pressed while
-      the element is focused.
-    </p>
-    <p>
-      Problems can arise when both event handlers are combined. While in most
-      cases combining both event handlers is necessary, that is not the case
-      with button elements. This is because the click event will be activated by
-      pressing enter on a button, something that does not happen with other
-      elements. This means that if both click and keyup.enter are used on a
-      button element they will each be activated when a user presses enter.
-    </p>
-    <h2>Specifications For HTML Elements</h2>
-    <table class="spec-table2">
-      <tr>
-        <td></td>
-        <td>User clicks</td>
-        <td>User presses enter</td>
-      </tr>
-      <tr>
-        <td class="left-key">
-          {{ "a" | htmlTag }}<br />
-          (click)
-        </td>
-        <td>S</td>
-        <td>X</td>
-      </tr>
-      <tr>
-        <td class="left-key">
-          {{ "a" | htmlTag }}<br />
-          (click)<br />
-          (keyup.enter)
-        </td>
-        <td>S</td>
-        <td>S</td>
-      </tr>
-      <tr>
-        <td class="left-key">
-          {{ "button" | htmlTag }}<br />
-          (click)
-        </td>
-        <td>S</td>
-        <td>S</td>
-      </tr>
-      <tr>
-        <td class="left-key">
-          {{ "button" | htmlTag }}<br />
-          (click)<br />
-          (keyup.enter)
-        </td>
-        <td>S</td>
-        <td>*</td>
-      </tr>
-      <tr>
-        <td class="left-key">
-          {{ "div" | htmlTag }}<br />
-          (click)
-        </td>
-        <td>S</td>
-        <td>X</td>
-      </tr>
-      <tr>
-        <td class="left-key">
-          {{ "div" | htmlTag }}<br />
-          (click)<br />
-          (keyup.enter)
-        </td>
-        <td>S</td>
-        <td>S</td>
-      </tr>
-      <tr>
-        <td class="left-key">
-          {{ "li" | htmlTag }}<br />
-          (click)
-        </td>
-        <td>S</td>
-        <td>X</td>
-      </tr>
-      <tr>
-        <td class="left-key">
-          {{ "li" | htmlTag }}<br />
-          (click)<br />
-          (keyup.enter)
-        </td>
-        <td>S</td>
-        <td>S</td>
-      </tr>
-    </table>
-    <p class="spec-table-footer">
-      S => success; X => failure; * => both event listeners will trigger;
-    </p>
-  </div>
+	<div class="col-md-12">
+		<h1>Specs</h1>
+		<h2>What's This About?</h2>
+		<p>
+			This project is a demonstration of how different HTML elements behave with
+			Angular's click and keyup.enter event handlers. Proper use of the
+			keyup.enter event handler is critical to maintain site usability for
+			keyboard-exclusive users and is therefore critical to follow
+			<a href="https://www.w3.org/TR/WCAG21/#keyboard-accessible">
+				WCAG Guidleine 2.1 </a
+			>.
+		</p>
+		<h2>How These Event Handlers Work</h2>
+		<p>
+			Both event handlers have straightforward names. The
+			<code>click</code> handler is declared on an HTML element along with a
+			quoted template statement. Angular event binding will listen for the
+			element's click event and call the template statement. The
+			<code>keyup.enter</code> event listener follows the same pattern, with the
+			Angular event binding now listening for the element's keyup enter event.
+			The standard practice is to call a single function to handle the event.
+		</p>
+		<p>
+			The following is an example of the click and keyup.enter event handlers.
+		</p>
+		<p>
+			<code
+				>&lt;button (click)="myClickFunction()"&gt;Submit{{
+					'/button' | htmlTag
+				}}</code
+			><br />
+			<code
+				>&lt;button (keyup.enter)="myEnterFunction()"&gt;Submit{{
+					'/button' | htmlTag
+				}}</code
+			>
+		</p>
+		<h2>Using These Event Handlers Properly</h2>
+		<p>
+			The click event handler works consistently and as expected. All elements
+			with a click event handler on them will run their function when clicked.
+			The keyup.enter function is also consistent. All elements with a
+			keyup.enter handler will run their function when enter is pressed while
+			the element is focused.
+		</p>
+		<p>
+			Problems can arise when both event handlers are combined. While in most
+			cases combining both event handlers is necessary, that is not the case
+			with button elements. This is because the click event will be activated by
+			pressing enter on a button, something that does not happen with other
+			elements. This means that if both click and keyup.enter are used on a
+			button element they will each be activated when a user presses enter.
+		</p>
+		<h2>Specifications For HTML Elements</h2>
+		<table class="spec-table2">
+			<tr>
+				<td></td>
+				<td>User clicks</td>
+				<td>User presses enter</td>
+			</tr>
+			<tr>
+				<td class="left-key">
+					{{ 'a' | htmlTag }}<br />
+					(click)
+				</td>
+				<td>S</td>
+				<td>X</td>
+			</tr>
+			<tr>
+				<td class="left-key">
+					{{ 'a' | htmlTag }}<br />
+					(click)<br />
+					(keyup.enter)
+				</td>
+				<td>S</td>
+				<td>S</td>
+			</tr>
+			<tr>
+				<td class="left-key">
+					{{ 'button' | htmlTag }}<br />
+					(click)
+				</td>
+				<td>S</td>
+				<td>S</td>
+			</tr>
+			<tr>
+				<td class="left-key">
+					{{ 'button' | htmlTag }}<br />
+					(click)<br />
+					(keyup.enter)
+				</td>
+				<td>S</td>
+				<td>*</td>
+			</tr>
+			<tr>
+				<td class="left-key">
+					{{ 'div' | htmlTag }}<br />
+					(click)
+				</td>
+				<td>S</td>
+				<td>X</td>
+			</tr>
+			<tr>
+				<td class="left-key">
+					{{ 'div' | htmlTag }}<br />
+					(click)<br />
+					(keyup.enter)
+				</td>
+				<td>S</td>
+				<td>S</td>
+			</tr>
+			<tr>
+				<td class="left-key">
+					{{ 'li' | htmlTag }}<br />
+					(click)
+				</td>
+				<td>S</td>
+				<td>X</td>
+			</tr>
+			<tr>
+				<td class="left-key">
+					{{ 'li' | htmlTag }}<br />
+					(click)<br />
+					(keyup.enter)
+				</td>
+				<td>S</td>
+				<td>S</td>
+			</tr>
+		</table>
+		<p class="spec-table-footer">
+			S => success; X => failure; * => both event listeners will trigger;
+		</p>
+	</div>
 </div>
