--- a/src/app/no-tabindex/no-tabindex.component.html
+++ b/src/app/no-tabindex/no-tabindex.component.html
@@ -97,7 +97,7 @@
 		<div class="col-md-6">
 			<div class="chat-wrapper">
 				<div *ngFor="let te of textMessages">
-					<speech-bubble [textMessage]="te"></speech-bubble>
+					<speech-bubble [textMessage]="te" />
 				</div>
 				<p *ngIf="textMessages.length === 0" class="no-chats">
 					You have no chat history.
