Refactoring references to site name. Adding AWS to about page.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -60,12 +60,25 @@
 						/>
 					</a>
 				</li>
+				<li>
+					<a
+						href="https://aws.amazon.com/what-is-aws/"
+						rel="noreferrer"
+						target="_blank"
+					>
+						<img
+							src="assets/images/tech-badges/aws.svg"
+							alt="Amazon Web Services (AWS)"
+							class="tech-badge"
+						/>
+					</a>
+				</li>
 			</ul>
 		</div>
 		<p>
-			This project is built Angular using HTML5, CSS3, and TypeScript. Bootstrap
-			is installed and utilized for a responsive UI. The full code for this site
-			is available on
+			This project is built in Angular using HTML5, CSS3, and TypeScript.
+			Bootstrap is installed and utilized for a responsive UI. The site is
+			hosted on. The full code for this site is available on
 			<a
 				href="https://github.com/kafkaesc/Call-Me-Ishmael"
 				rel="noreferrer"
@@ -81,7 +94,7 @@
 				target="_blank"
 				>phone icon</a
 			>
-			used in the Call Me Ishmael badge was made available by Font Awesome under
+			used in the Call-Me-Ishmael badge was made available by Font Awesome under
 			a
 			<a
 				href="https://fontawesome.com/license"
@@ -138,6 +151,19 @@
 						<img
 							src="assets/images/social/instagram.png"
 							alt="Instagram"
+							class="soc-icon"
+						/>
+					</a>
+				</li>
+				<li>
+					<a
+						href="https://linkedin.com/in/jahettinger"
+						rel="noreferrer"
+						target="_blank"
+					>
+						<img
+							src="assets/images/social/linkedin.png"
+							alt="LinkedIn"
 							class="soc-icon"
 						/>
 					</a>
